# chronospect

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
examples/: case_study.md  generate_calibration.py  run_case_study.py
results/: calibration_v0.2.json  realmodel_v0.2.json
src/chronospect/: __init__.py  calibration.py  cli.py  loggers.py  report.py  sensitivity.py  synthetic.py
src/chronospect/estimators/: __init__.py  autocorr.py  forgetting.py  observability.py  spectrum.py  twotime.py
tests/: test_calibration.py  test_cli.py  test_determinism.py  test_edges.py  test_forgetting.py  test_gate.py  test_loggers.py  test_observability.py  test_real_model_smoke.py  test_report.py  test_spectrum.py  test_synthetic.py  test_twotime.py
