[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronospect"
version = "0.2.0a1"
description = "A CPU-only measurement instrument for the timescale spectrum and aging dynamics of a model's memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "hinanohart" }]
keywords = [
    "continual-learning",
    "long-term-memory",
    "timescale",
    "interpretability",
    "diagnostics",
    "nested-learning",
    "titans",
    "state-space-models",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "PyWavelets>=1.4",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
chronospect = "chronospect.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/chronospect"
Repository = "https://github.com/hinanohart/chronospect"

[tool.hatch.build.targets.wheel]
packages = ["src/chronospect"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
